# encon

./: .gitignore  Cargo.toml  README.md  README.tpl
encon-cli/: Cargo.toml
encon-cli/src/: main.rs
encon-js/: README.md  package.json
encon-js/src/: basic-cli.js  index.js
examples/: between-rust-and-js.rs  encrypt.rs
src/: error.rs  legacy.rs  lib.rs  serde.rs  util.rs
