[package]
name = "encon"
version = "0.0.2"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "an optionally-encrypted config format, built on top of JSON"

[workspace]
members = [
    "encon-cli",
    "encon-prompt",
]

[dependencies]
sodiumoxide = "0.2"
serde_json = "1"
serde = "1"
hex = "0.4"
indexmap = { version = "1.6", features = ["serde-1"] }